# routes/api.php
@@ -7,6 +7,7 @@ use App\Http\Controllers\OrderController;
 use App\Http\Controllers\PageController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\ProductExportController;
+use App\Http\Controllers\ProductImportController;
 use App\Http\Controllers\SharedAccessController;
 use App\Http\Controllers\TagController;
 use App\Http\Controllers\UserController;
@@ -21,6 +22,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('categories', CategoryController::class);
     Route::apiResource('products', ProductController::class);
     Route::get('export-products', [ProductExportController::class, 'export']);
+    Route::post('import-products', [ProductImportController::class, 'import']);
+
     Route::apiResource('orders', OrderController::class);
 
     Route::apiResource('/shared-accesses', SharedAccessController::class);
